//syntax = "proto3";

package io.parapet.protobuf;

enum CmdType {
    CONNECT = 0;
    CONNECTED = 1;
    NEW_STREAM = 2;
    OPENED_STREAM = 3;
    STREAM_READY = 4;
}

message Command {
    required CmdType cmdType = 1;
    optional bytes data = 2;
}

message PeerInfo {
    required string addr = 1;
}

message Connect {
    required PeerInfo peerInfo = 1;
}

message Connected {
    required bool ok = 1;
    optional string msg = 2 [default = ""];
}

message OpenedStream {
    required bool ok = 1;
    required string protocolId = 2;
    required string peerAddr = 3;
    optional string address = 4 [default = ""]; // stream addr
    optional string msg = 5 [default = ""];
}

message StreamReady {
     required string protocolId = 2;
     required string peerAddr = 3;
}

message NewStream {

    // todo streamId ?
    required PeerInfo peerInfo = 1;
    required string protocolId = 2;
    required string address = 3;

}
